--- a/acoustid.sql.in
+++ b/acoustid.sql.in
@@ -6,6 +6,11 @@ CREATE OR REPLACE FUNCTION acoustid_compare(int4[], int4[]) RETURNS float4
     LANGUAGE C VOLATILE STRICT -- marked as VOLATILE to avoid multiple calls, even though the results are immutable
     COST 1000;
 
+CREATE OR REPLACE FUNCTION acoustid_compare2(int4[], int4[]) RETURNS float4
+    AS 'MODULE_PATHNAME'
+    LANGUAGE C VOLATILE STRICT -- marked as VOLATILE to avoid multiple calls, even though the results are immutable
+    COST 1000;
+
 CREATE OR REPLACE FUNCTION acoustid_extract_query(int4[]) RETURNS int4[]
     AS 'MODULE_PATHNAME'
     LANGUAGE C IMMUTABLE STRICT;
